Revert "added first iteration of multi-tenancy"
This reverts commit 682226eaf1900f9c12b9ce19dc681261cd44f105.

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -58,13 +58,12 @@ seeds:
 vars:
   crm_warehouse_company_sources: []
   crm_warehouse_contact_sources: []
-  marketing_warehouse_channel_performance: []
   crm_warehouse_conversations_sources: []
   marketing_warehouse_ad_campaign_performance_sources: []
-  marketing_warehouse_ad_performance_sources: ['facebook_ads','facebook_ads_2']
-  marketing_warehouse_ad_campaign_sources: ['facebook_ads','facebook_ads_2']
-  marketing_warehouse_ad_group_sources: ['facebook_ads','facebook_ads_2']
-  marketing_warehouse_ad_sources: ['facebook_ads','facebook_ads_2']
+  marketing_warehouse_ad_performance_sources: ['facebook_ads']
+  marketing_warehouse_ad_campaign_sources: ['facebook_ads']
+  marketing_warehouse_ad_group_sources: ['facebook_ads','google_ads']
+  marketing_warehouse_ad_sources: ['facebook_ads']
   marketing_warehouse_email_event_sources: []
   marketing_warehouse_email_list_sources: []
   marketing_warehouse_deal_sources: []
@@ -121,13 +120,20 @@ vars:
 
   stg_facebook_ads_id-prefix: fbads-
   stg_facebook_ads_etl: stitch
+  stg_facebook_ads_stitch_database: ra-warehouse-dev
   stg_facebook_ads_stitch_schema: stitch_facebook_ads
+  stg_facebook_ads_stitch_ad_performance_table: "{{ source('stitch_facebook_ads', 'insights') }}"
+  stg_facebook_ads_stitch_ad_performance_table_snowflake: "{{ source('stitch_facebook_ads', 'ads_insights') }}"
+  stg_facebook_ads_stitch_ad_groups_table: "{{ source('stitch_facebook_ads', 'adsets') }}"
+  stg_facebook_ads_stitch_ad_groups_table_snowflake: "{{ source('stitch_facebook_ads', 'adsets') }}"
+  stg_facebook_ads_stitch_ads_table: "{{ source('stitch_facebook_ads', 'ads') }}"
+  stg_facebook_ads_stitch_campaigns_table: "{{ source('stitch_facebook_ads', 'campaigns') }}"
+  stg_facebook_ads_segment_database: ra-warehouse-dev
   stg_facebook_ads_segment_schema: facebook_ads
-  stg_facebook_ads_tenant_name: rittmananalytics.com
-  stg_facebook_ads_2_id-prefix: fbads-
-  stg_facebook_ads_2_stitch_schema: stitch_facebook_ads_2
-  stg_facebook_ads_2_tenant_name: ecomstartup.com
-
+  stg_facebook_ads_segment_ad_performance_table: "{{ source('segment_facebook_ads', 'insights') }}"
+  stg_facebook_ads_segment_ad_groups_table: "{{ source('stitch_facebook_ads', 'ad_adsets') }}"
+  stg_facebook_ads_segment_ads_table: "{{ source('segment_facebook_ads', 'ads') }}"
+  stg_facebook_ads_segment_campaigns_table: "{{ source('segment_facebook_ads', 'campaigns') }}"
 
   stg_google_ads_id-prefix: gads-
   stg_google_ads_etl: stitch
