--- a/models/sources/stg_facebook_ads/schema/sources.yml
+++ b/models/sources/stg_facebook_ads/schema/sources.yml
@@ -2,6 +2,7 @@ version: 2
 
 sources:
   - name: stitch_facebook_ads
+    database: "{{ var('stg_facebook_ads_stitch_database') }}"
     schema: "{{ var('stg_facebook_ads_stitch_schema') }}"
 
     freshness:
@@ -17,6 +18,7 @@ sources:
       - name: campaigns
 
   - name: segment_facebook_ads
+    database: "{{ var('stg_facebook_ads_segment_database') }}"
     schema: "{{ var('stg_facebook_ads_segment_schema') }}"
 
     freshness:
