--- a/models/sources/stg_hubspot_email/schema/sources.yml
+++ b/models/sources/stg_hubspot_email/schema/sources.yml
@@ -2,6 +2,7 @@ version: 2
 
 sources:
   - name: stitch_hubspot_email
+    database: "{{ var('stg_hubspot_email_stitch_database') }}"
     schema: "{{ var('stg_hubspot_email_stitch_schema') }}"
 
     freshness:
